[tool.poetry]
name = "charlib"
version = "1.0.1"
description = "An open-source standard cell library characterizer"
repository = "https://github.com/stineje/CharLib"
authors = [
	"Marcus Mellor <infinitymdm@gmail.com>",
	"James Stine <james.stine@okstate.edu",
]
license = "GPL-2.0"
readme = "README.md"
packages = [{include = "charlib"}]

[tool.poetry.dependencies]
python = ">=3.11"
pyspice = {git = "https://github.com/infinitymdm/PySpice.git"}
liberty-parser = ">=0.0.23"
pyyaml = ">=6.0.1"
numpy = ">=2.0.0"
matplotlib = "^3.8.2"
Sphinx = "^8.2.3"
sphinx-rtd-theme = "^3.0.2"
pytest = "^8.4.1"
schema = "^0.7.7"
jsonschema2rst = "^0.1.7"

[tool.poetry.scripts]
charlib = "charlib.characterizer.run:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
