[project]
name = "charlib"
version = "2.1.0"
description = "An open-source standard cell library characterizer"
license = "GPL-2.0"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Marcus Mellor", email = "marcus@infinitymdm.dev"},
    {name = "James Stine",   email = "james.stine@okstate.edu"},
]
keywords = [ "VLSI", "EDA" ]
classifiers = [ "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)" ]
dependencies = [
    "liberty-parser>=0.0.29",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pyspice @ git+https://github.com/infinitymdm/PySpice.git",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "schema>=0.7.8",
    "tqdm>=4.67.3",
]

[project.optional-dependencies]
docs = [
    "Sphinx>=9.1.0",
    "jsonschema2rst>=0.1.7",
    "sphinx-rtd-theme>=3.1.0",
]

[project.urls]
repository = "https://github.com/stineje/CharLib"
documentation = "https://stineje.github.io/CharLib/"

[project.scripts]
charlib = "charlib.cli.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "test/syntax",
    "test/logic"
]
